Rename activity_main.xml to activity_inline.xml Make a name change to activity_main.xml to activity_line.xml to avoid ambiguity.

--- a/app/src/main/res/layout/activity_inline.xml
+++ b/app/src/main/res/layout/activity_inline.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Inline"
+    tools:context=".InlineActivity"
     android:background="@android:color/white">
 
-    <!-- Gambar Vektor Bendera -->
 
     <ImageView
         android:id="@+id/imageViewVector"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="155dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="-42dp"
+        android:layout_marginTop="-17dp"
+        android:contentDescription="@string/todo"
         android:scaleType="fitXY"
         android:src="@drawable/shapeflag" />
 
-    <!-- Logo OfficeDesk -->
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="340dp"
+        android:layout_height="135dp"
+        android:layout_below="@+id/imageViewVector"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="218dp"
+        android:contentDescription="@string/todo2"
         android:scaleType="fitXY"
         android:src="@drawable/logo" />
-    <!-- Tombol -->
+
 
     <ImageButton
         android:id="@+id/button_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="312dp"
+        android:layout_height="47dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="151dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginRight="54dp"
+        android:layout_marginBottom="45dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/todo1"
+        android:scaleType="fitXY"
         android:src="@drawable/button_login" />
 </RelativeLayout>
