res/layout : Changing and arranging layouts

--- a/app/src/main/res/layout/activity_inline.xml
+++ b/app/src/main/res/layout/activity_inline.xml
@@ -43,5 +43,6 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/todo1"
         android:scaleType="fitXY"
-        android:src="@drawable/button_login" />
+        android:src="@drawable/button_login"
+        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
 </RelativeLayout>
