--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".SignUpActivity" >
+    tools:context=".SignUpActivity">
 
     <ImageView
         android:id="@+id/header_image"
@@ -14,7 +15,6 @@
         android:layout_marginTop="-17dp"
         android:scaleType="fitXY"
         android:src="@drawable/shapeflag" />
-
 
     <ImageView
         android:id="@+id/title_image"
@@ -30,98 +30,99 @@
         android:layout_width="375dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/title_image"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="14dp"
         android:src="@drawable/texthome" />
 
-    <ImageView
+    <LinearLayout
         android:id="@+id/username_password_background"
-        android:layout_width="386dp"
-        android:layout_height="252dp"
+        android:layout_width="match_parent"
+        android:layout_height="294dp"
         android:layout_below="@id/tagline_image"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="71dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/shape_vector" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
+        android:layout_marginBottom="90dp"
+        android:background="@drawable/shape_vector"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/usernametext"
-        android:layout_width="202dp"
-        android:layout_height="34dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="102dp"
-        android:layout_marginEnd="107dp"
-        android:layout_marginRight="107dp"
-        android:layout_marginBottom="326dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/username_text" />
+        <ImageView
+            android:id="@+id/usernametext"
+            android:layout_width="270dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/username_text" />
 
-    <ImageView
-        android:id="@+id/passwordtext"
-        android:layout_width="202dp"
-        android:layout_height="34dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="109dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginBottom="215dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/password_text"
-        tools:ignore="ImageContrastCheck" />
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="305dp"
+            android:layout_height="51dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/background_username_password"
+            android:hint="Masukkan Username"
+            android:padding="16dp"
+            android:textColor="#000000"
+            android:textColorHint="#F0203B"
+            tools:ignore="TextContrastCheck" />
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="305dp"
-        android:layout_height="51dp"
-        android:layout_below="@id/username_password_background"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="-185dp"
-        android:background="@drawable/background_username_password"
-        android:hint="Masukkan Username / Email"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textColorHint="#F0203B"
-        tools:ignore="TextContrastCheck" />
+        <ImageView
+            android:id="@+id/passwordtext"
+            android:layout_width="270dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/password_text" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="305dp"
-        android:layout_height="51dp"
-        android:layout_below="@id/username"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="58dp"
-        android:background="@drawable/background_username_password"
-        android:hint="Masukkan Password"
-        android:inputType="textPassword"
-        android:padding="16dp"
-        android:textColor="#000000"
-        android:textColorHint="#F0203B"
-        tools:ignore="TextContrastCheck" />
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="305dp"
+            android:layout_height="55dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/background_username_password"
+            android:hint="Masukkan Password"
+            android:inputType="textPassword"
+            android:padding="16dp"
+            android:textColor="#000000"
+            android:textColorHint="#F0203B"
+            tools:ignore="TextContrastCheck" />
+
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/signup"
-        android:layout_width="295dp"
-        android:layout_height="74dp"
+        android:layout_width="172dp"
+        android:layout_height="62dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="58dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginRight="58dp"
-        android:layout_marginBottom="32dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="14dp"
+        android:layout_marginEnd="225dp"
+        android:layout_marginRight="225dp"
+        android:layout_marginBottom="21dp"
         android:background="@drawable/sign_button"
         android:scaleType="fitXY"
         tools:ignore="SpeakableTextPresentCheck" />
 
-</RelativeLayout>
+    <ImageButton
+        android:id="@+id/login"
+        android:layout_width="197dp"
+        android:layout_height="66dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="62dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="21dp"
+        android:background="@drawable/login_button"
+        android:scaleType="fitXY"
+        tools:ignore="SpeakableTextPresentCheck" />
 
+</RelativeLayout>
