--- a/app/src/main/res/layout/activity_inline.xml
+++ b/app/src/main/res/layout/activity_inline.xml
@@ -6,7 +6,6 @@
     tools:context=".InlineActivity"
     android:background="@android:color/white">
 
-
     <ImageView
         android:id="@+id/imageViewVector"
         android:layout_width="match_parent"
@@ -17,32 +16,38 @@
         android:scaleType="fitXY"
         android:src="@drawable/shapeflag" />
 
-
     <ImageView
         android:id="@+id/imageViewLogo"
         android:layout_width="340dp"
         android:layout_height="135dp"
-        android:layout_below="@+id/imageViewVector"
+        android:layout_below="@id/imageViewVector"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="218dp"
         android:contentDescription="@string/todo2"
         android:scaleType="fitXY"
         android:src="@drawable/logo" />
 
-
-    <ImageButton
-        android:id="@+id/button_login"
-        android:layout_width="312dp"
-        android:layout_height="47dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageViewLogo"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="54dp"
-        android:layout_marginRight="54dp"
-        android:layout_marginBottom="45dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/todo1"
-        android:scaleType="fitXY"
-        android:src="@drawable/button_login"
-        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
+        android:layout_marginTop="147dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="35dp"
+        android:orientation="vertical">
+
+        <ImageButton
+            android:id="@+id/button_login"
+            android:layout_width="312dp"
+            android:layout_height="47dp"
+            android:layout_marginTop="306dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/todo"
+            android:scaleType="fitXY"
+            android:src="@drawable/button_login"
+            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
+    </LinearLayout>
+
 </RelativeLayout>
