--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -91,6 +91,19 @@
             android:textColorHint="#F0203B"
             tools:ignore="TextContrastCheck" />
 
+        <CheckBox
+            android:id="@+id/rememberMeCheckBox"
+            android:layout_width="134dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/password"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="1dp"
+            android:scaleX="1"
+            android:scaleY="1"
+            android:text="Simpan Login"
+            android:textColor="#FFFFFF"/>
+
+
     </LinearLayout>
 
     <ImageButton
