--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,141 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
     tools:context=".SignUpActivity">
 
     <ImageView
         android:id="@+id/header_image"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="155dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="-17dp"
         android:scaleType="fitXY"
-        android:src="@drawable/shapeflag" />
+        android:src="@drawable/shapeflag"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/title_image"
         android:layout_width="360dp"
         android:layout_height="135dp"
-        android:layout_below="@id/header_image"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="105dp"
-        android:src="@drawable/logo" />
+        android:layout_marginTop="48dp"
+        android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_image"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/tagline_image"
         android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title_image"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="14dp"
-        android:src="@drawable/texthome" />
+        android:src="@drawable/texthome"
+        app:layout_constraintTop_toBottomOf="@id/title_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
 
-    <LinearLayout
+    <ImageView
         android:id="@+id/username_password_background"
-        android:layout_width="match_parent"
-        android:layout_height="294dp"
-        android:layout_below="@id/tagline_image"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:layout_marginBottom="90dp"
+        android:layout_width="412dp"
+        android:layout_height="336dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/shape_vector"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tagline_image"
+        tools:ignore="ContentDescription,VisualLintBounds" />
 
-        <ImageView
-            android:id="@+id/usernametext"
-            android:layout_width="270dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/username_text" />
+    <ImageView
+        android:id="@+id/usernametext"
+        android:layout_width="171dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="52dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/username_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagline_image"
+        tools:ignore="ContentDescription" />
 
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="305dp"
-            android:layout_height="51dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/background_username_password"
-            android:hint="Masukkan Username"
-            android:padding="16dp"
-            android:textColor="#000000"
-            android:textColorHint="#F0203B"
-            tools:ignore="TextContrastCheck" />
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="376dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/background_username_password"
+        android:hint="Masukkan Username"
+        android:padding="16dp"
+        android:textColor="#000000"
+        android:textColorHint="#F0203B"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagline_image"
+        tools:ignore="Autofill,HardcodedText,TextContrastCheck,TextFields" />
 
-        <ImageView
-            android:id="@+id/passwordtext"
-            android:layout_width="270dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/password_text" />
+    <ImageView
+        android:id="@+id/passwordtext"
+        android:layout_width="155dp"
+        android:layout_height="28dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="180dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/password_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagline_image"
+        tools:ignore="ContentDescription" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="305dp"
-            android:layout_height="55dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/background_username_password"
-            android:hint="Masukkan Password"
-            android:inputType="textPassword"
-            android:padding="16dp"
-            android:textColor="#000000"
-            android:textColorHint="#F0203B"
-            tools:ignore="TextContrastCheck" />
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="376dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="228dp"
+        android:background="@drawable/background_username_password"
+        android:hint="Masukkan Password"
+        android:inputType="textPassword"
+        android:padding="16dp"
+        android:textColor="#000000"
+        android:textColorHint="#F0203B"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagline_image"
+        tools:ignore="Autofill,HardcodedText,TextContrastCheck" />
 
-        <CheckBox
-            android:id="@+id/rememberMeCheckBox"
-            android:layout_width="134dp"
-            android:layout_height="50dp"
-            android:layout_below="@id/password"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="1dp"
-            android:scaleX="1"
-            android:scaleY="1"
-            android:text="Simpan Login"
-            android:textColor="#FFFFFF"/>
-
-
-    </LinearLayout>
+    <CheckBox
+        android:id="@+id/rememberMeCheckBox"
+        android:layout_width="144dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="288dp"
+        android:text="Simpan Login"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagline_image"
+        tools:ignore="HardcodedText" />
 
     <ImageButton
         android:id="@+id/signup"
-        android:layout_width="172dp"
-        android:layout_height="62dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="14dp"
-        android:layout_marginEnd="225dp"
-        android:layout_marginRight="225dp"
-        android:layout_marginBottom="21dp"
+        android:layout_width="213dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/sign_button"
+        android:contentDescription="TODO"
         android:scaleType="fitXY"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username_password_background"
+        app:layout_constraintWidth_percent="0.45"
+        tools:ignore="ContentDescription,DuplicateSpeakableTextCheck,HardcodedText,MissingConstraints,SpeakableTextPresentCheck,VisualLintBounds" />
 
     <ImageButton
         android:id="@+id/login"
-        android:layout_width="197dp"
-        android:layout_height="66dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="62dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="21dp"
+        android:layout_width="156dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/login_button"
+        android:contentDescription="TODO"
         android:scaleType="fitXY"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/signup"
+        app:layout_constraintTop_toBottomOf="@+id/username_password_background"
+        app:layout_constraintWidth_percent="0.45"
+        tools:ignore="ContentDescription,HardcodedText,MissingConstraints,SpeakableTextPresentCheck,VisualLintBounds" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
