--- a/app/src/main/res/layout-sw360dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-sw360dp/activity_dashboard.xml
@@ -161,20 +161,20 @@
         app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerflagdash"
-        app:layout_constraintVertical_bias="0.046"
+        app:layout_constraintVertical_bias="0.022"
         tools:ignore="HardcodedText,MissingConstraints" />
 
     <ImageView
         android:id="@+id/historytextdb"
         android:layout_width="379dp"
         android:layout_height="64dp"
-        android:layout_marginTop="35dp"
         android:background="@drawable/history_db"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.406"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/headerflagdash"
+        app:layout_constraintVertical_bias="0.115"
         tools:ignore="ContentDescription,MissingConstraints" />
 
 
