--- a/app/src/main/res/layout-sw392dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-sw392dp/activity_dashboard.xml
@@ -172,6 +172,7 @@
         android:background="@drawable/history_db"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
         app:layout_constraintVertical_bias="0.0"
